site/content/docs/4.5/components/popovers.md
---
layout: docs
title: Всплывающие окна
description: Документация и примеры добавления всплывающих окон Bootstrap, подобных тем, которые есть в iOS, к любому элементу на Вашем сайте.
group: components
toc: true
---

## Обзор

Что нужно знать при использовании плагина popover:

- Popovers полагаются на стороннюю библиотеку [Popper](https://popper.js.org/) для позиционирования. Вы должны включить [popper.min.js]({{< param "cdn.popper" >}}) перед bootstrap.js или использовать `bootstrap.bundle.min.js` / `bootstrap.bundle.js, который содержит Popper чтобы поповеры работали!
- Для всплывающих окон требуется [плагин всплывающей подсказки]({{< docsref "/components/tooltips" >}}) в качестве зависимости.
- Если Вы создаете наш JavaScript из исходного кода, он [требуется `util.js`]({{< docsref "/getting-started/javascript#util" >}}).
- Всплывающие окна включены по соображениям производительности, поэтому **Вы должны инициализировать их самостоятельно**.
- Значения `title` и `content` нулевой длины никогда не будут показывать всплывающее окно.
- Укажите `container: 'body'`, чтобы избежать проблем с рендерингом в более сложных компонентах (например, в наших группах ввода, группах кнопок и т.д.).
- Запуск всплывающих окон для скрытых элементов не работает.
- Всплывающие окна для элементов `.disabled` или `disabled` должны запускаться в элементе оболочки.
- При запуске от якорей, которые переносятся по нескольким строкам, всплывающие окна будут центрированы между общей шириной якорей. Используйте `.text-nowrap` на Ваших `<a>` чтобы избежать такого поведения.
- Всплывающие окна должны быть скрыты до того, как соответствующие им элементы будут удалены из DOM.
- Всплывающие окна могут запускаться благодаря элементу внутри теневого DOM.

{{< callout info >}}
{{< partial "callout-info-prefersreducedmotion.md" >}}
{{< /callout >}}

Продолжайте читать, чтобы увидеть, как работают всплывающие окна, на некоторых примерах.

## Пример: включить всплывающие окна везде

Один из способов инициализировать все всплывающие окна на странице - выбрать их по атрибуту `data-toggle`:

```js
$(function () {
  $('[data-toggle="popover"]').popover()
})
```

## Пример: использование варианта `container`

Если у Вас есть стили родительского элемента, которые мешают отображению всплывающего окна, Вам нужно указать собственный `container`, чтобы HTML всплывающего окна отображался внутри этого элемента.

```js
$(function () {
  $('.example-popover').popover({
    container: 'body'
  })
})
```

## Пример

{{< example >}}
<button type="button" class="btn btn-lg btn-danger" data-toggle="popover" title="Заголовок всплывающего окна" data-content="А вот и потрясающий контент. Это очень интересно. Верно?">Нажмите, чтобы переключить всплывающее окно</button>
{{< /example >}}

### Четыре направления

Доступны четыре варианта: по верхнему, правому, нижнему и левому краям.

<div class="bd-example popover-demo">
  <div class="bd-example-popovers">
    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
      Всплывающее окно вверху
    </button>
    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
      Всплывающее окно справа
    </button>
    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
      Всплывающее окно внизу
    </button>
    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="left" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
      Всплывающее окно слева
    </button>
  </div>
</div>

```html
<button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
  Всплывающее окно вверху
</button>

<button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
  Всплывающее окно справа
</button>

<button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
  Всплывающее окно внизу
</button>

<button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="left" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
  Всплывающее окно слева
</button>
```

### Отклонить при следующем нажатии

Используйте триггер `focus`, чтобы закрыть всплывающие окна при следующем щелчке пользователем элемента, отличного от элемента переключения.

{{< callout danger >}}
#### Специальная разметка, необходимая для закрытия при следующем щелчке

Для правильного кроссбраузерного и кросс-платформенного поведения вы должны использовать тег `<a>`, _не_ тег `<button>`, а также вы должны включить атрибут [`tabindex`](https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/tabindex).
{{< /callout >}}

{{< example >}}
<a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus" title="Отклоняемое всплывающее окно" data-content="А вот и потрясающий контент. Это очень интересно. Верно?">Отклоняемое всплывающее окно</a>
{{< /example >}}

```js
$('.popover-dismiss').popover({
  trigger: 'focus'
})
```

### Отключенные элементы

Элементы с атрибутом `disabled` не являются интерактивными, то есть пользователи не могут навести на них курсор или щелкнуть по ним, чтобы вызвать всплывающее окно (или всплывающую подсказку). В качестве обходного пути вы захотите вызвать всплывающее окно из оболочки `<div>` или `<span>` и переопределить `pointer-events` на отключенном элементе.

Для отключенных триггеров всплывающего окна Вы также можете предпочесть `data-trigger="hover"`, чтобы всплывающее окно отображалось как немедленная визуальная обратная связь для Ваших пользователей, поскольку они могут не ожидать _нажатия_ на отключенный элемент.

{{< example >}}
<span class="d-inline-block" data-toggle="popover" data-content="Отключенное всплывающее окно">
  <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled>Отключенная кнопка</button>
</span>
{{< /example >}}

## Применение

Включить всплывающие окна через JavaScript:

```js
$('#example').popover(options)
```

{{< callout warning >}}
##### GPU ускорение

Всплывающие окна иногда выглядят размытыми на устройствах с Windows 10 из-за ускорения графического процессора и измененного системного DPI. Чтобы решить эту проблему в версии 4, необходимо отключить ускорение графического процессора в Ваших всплывающих окнах.

Предлагаемое исправление:

```js
Popper.Defaults.modifiers.computeStyle.gpuAcceleration = !(window.devicePixelRatio < 1.5 && /Win/.test(navigator.platform))
```
{{< /callout >}}

{{< callout warning >}}
### Как заставить всплывающие окна работать для пользователей клавиатуры и вспомогательных технологий

Чтобы позволить пользователям клавиатуры активировать Ваши всплывающие окна, Вы должны добавлять их только к элементам HTML, которые традиционно ориентированы на клавиатуру и являются интерактивными (например, ссылки или элементы управления формами). Хотя произвольные элементы HTML (такие как `<span>`) можно сделать доступными для фокусировки, добавив атрибут `tabindex="0"`, это добавит потенциально раздражающие и сбивающие с толку позиции табуляции на неинтерактивных элементах для пользователей клавиатуры, и большинство Вспомогательные технологии в настоящее время не объявляют содержимое всплывающего окна в этой ситуации. Кроме того, не полагайтесь исключительно на `hover` как на триггер для ваших всплывающих окон, так как это сделает их невозможным для пользователей клавиатуры.

Хотя Вы можете вставлять богатый структурированный HTML-код в всплывающие окна с опцией `html`, мы настоятельно рекомендуем Вам избегать добавления чрезмерного количества контента. В настоящее время всплывающие окна работают так, что после отображения их содержимое привязывается к элементу триггера с атрибутом `aria-describeby`. В результате весь контент всплывающего окна будет объявлен пользователям вспомогательных технологий как один длинный непрерывный поток.

Кроме того, хотя можно также включить интерактивные элементы управления (такие как элементы формы или ссылки) в Ваше всплывающее окно (путем добавления этих элементов в белый список `whiteList` или разрешенные атрибуты и теги), имейте в виду, что в настоящее время всплывающее окно не управляет фокусом порядка клавиатуры. Когда пользователь клавиатуры открывает всплывающее окно, фокус остается на инициирующем элементе, и поскольку всплывающее окно обычно не следует сразу за триггером в структуре документа, нет гарантии, что перемещение вперед/нажатие <kbd>TAB</kbd> приведет к перемещению пользователя клавиатуры в само всплывающее окно. Короче говоря, простое добавление интерактивных элементов управления к всплывающему окну может сделать эти элементы управления недоступными/непригодными для использования пользователями клавиатуры и пользователей вспомогательных технологий или, по крайней мере, сделать общий порядок фокусировки нелогичным. В этих случаях рассмотрите возможность использования модального диалога.
{{< /callout >}}

### Параметры

Параметры могут передаваться через атрибуты данных или JavaScript. Для атрибутов данных добавьте имя параметра к `data-`, как в `data-animation=""`.

{{< callout warning >}}
Обратите внимание, что по соображениям безопасности параметры `sanitize`, `sanitizeFn` и `whiteList` не могут быть предоставлены с использованием атрибутов данных.
{{< /callout >}}

<table class="table table-bordered table-striped">
  <thead>
    <tr>
      <th style="width: 100px;">Название</th>
      <th style="width: 100px;">тип</th>
      <th style="width: 50px;">По умолчанию</th>
      <th>Описание</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>animation</td>
      <td>boolean</td>
      <td>true</td>
      <td>Применить переход CSS fade к всплывающему окну</td>
    </tr>
    <tr>
      <td>container</td>
      <td>string | element | false</td>
      <td>false</td>
      <td>
        <p>Добавляет всплывающее окно к определенному элементу. Пример: <code>container: 'body'</code>. Этот параметр особенно полезен тем, что позволяет размещать всплывающее окно в потоке документа рядом с элементом запуска, что предотвращает перемещение всплывающего окна в сторону от элемента запуска во время изменения размера окна.</p>
      </td>
    </tr>
    <tr>
      <td>content</td>
      <td>string | element | function</td>
      <td>''</td>
      <td>
        <p>Значение содержимого по умолчанию, если атрибут <code>data-content</code> отсутствует.</p>
        <p>Если задана функция, она будет вызываться со ссылкой <code>this</code>, установленной на элемент, к которому прикреплено всплывающее окно.</p>
      </td>
    </tr>
    <tr>
      <td>delay</td>
      <td>number | object</td>
      <td>0</td>
      <td>
        <p>Задержка показа и скрытия всплывающего окна (мс) - не относится к ручному типу триггера.</p>
        <p>Если указан номер, задержка применяется как к скрытию, так и к отображению.</p>
        <p>Структура объекта: <code>delay: { "show": 500, "hide": 100 }</code></p>
      </td>
    </tr>
    <tr>
      <td>html</td>
      <td>boolean</td>
      <td>false</td>
      <td>Вставьте HTML в всплывающее окно. Если false, метод jQuery <code>text</code> будет использоваться для вставки содержимого в DOM. Используйте текст, если Вас беспокоят XSS-атаки.</td>
    </tr>
    <tr>
      <td>placement</td>
      <td>string | function</td>
      <td>'right'</td>
      <td>
        <p>Как разместить всплывающее окно - auto | top | bottom | left | right. <br> Когда указано <code>auto</code>, всплывающее окно будет динамически переориентировано.</p>
        <p>Когда функция используется для определения размещения, она вызывается с помощью узла DOM всплывающего окна в качестве первого аргумента и узла DOM элемента запуска в качестве второго. Контекст <code>this</code> установлен на экземпляр popover.</p>
      </td>
    </tr>
    <tr>
      <td>selector</td>
      <td>string | false</td>
      <td>false</td>
      <td>Если указан селектор, объекты всплывающих окон будут делегированы указанным целям. На практике это используется для включения всплывающих окон в динамический HTML-контент. Смотрите <a href="{{< param repo >}}/issues/4215">это</a> и <a href="https://codepen.io/team/bootstrap/pen/qBNGbYK">информативный пример</a>.</td>
    </tr>
    <tr>
      <td>template</td>
      <td>string</td>
      <td><code>'&lt;div class="popover" role="tooltip"&gt;&lt;div class="arrow"&gt;&lt;/div&gt;&lt;h3 class="popover-header"&gt;&lt;/h3&gt;&lt;div class="popover-body"&gt;&lt;/div&gt;&lt;/div&gt;'</code></td>
      <td>
        <p>Базовый HTML-код для использования при создании всплывающего окна.</p>
        <p><code>title</code> заголовок всплывающего окна будет вставлен в <code>.popover-header</code>.</p>
        <p><code>content</code> содержимое всплывающего окна будет вставлено в <code>.popover-body</code>.</p>
        <p><code>.arrow</code> станет стрелкой всплывающего окна.</p>
        <p>Самый внешний элемент оболочки должен иметь класс <code>.popover</code>.</p>
      </td>
    </tr>
    <tr>
      <td>title</td>
      <td>string | element | function</td>
      <td>''</td>
      <td>
        <p>Значение заголовка по умолчанию, если атрибут <code>title</code> отсутствует.</p>
        <p>Если задана функция, она будет вызываться со ссылкой <code>this</code>установленной на элемент, к которому прикреплено всплывающее окно.</p>
      </td>
    </tr>
    <tr>
      <td>trigger</td>
      <td>string</td>
      <td>'click'</td>
      <td>Как запускается всплывающее окно - click | hover | focus | manual. Вы можете передать несколько триггеров; разделите их пробелом. <code>manual</code> нельзя комбинировать с другими триггерами.</td>
    </tr>
    <tr>
      <td>offset</td>
      <td>number | string</td>
      <td>0</td>
      <td>Смещение всплывающего окна относительно его цели. Дополнительную информацию смотрите в <a href="https://popper.js.org/docs/v1/#modifiers..offset.offset">документации по смещению</a> Popper.</td>
    </tr>
    <tr>
      <td>fallbackPlacement</td>
      <td>string | array</td>
      <td>'flip'</td>
      <td>Разрешить указать, какую позицию Popper будет использовать при откате. Для получения дополнительной информации смотрите <a href="https://popper.js.org/docs/v1/#modifiers..flip.behavior">документацию о поведении</a> Popper.</td>
    </tr>
    <tr>
      <td>customClass</td>
      <td>string | function</td>
      <td>''</td>
      <td>
        <p>Добавляйте классы в всплывающее окно, когда оно отображается. Обратите внимание, что эти классы будут добавлены в дополнение к любым классам, указанным в шаблоне. Чтобы добавить несколько классов, разделите их пробелами: <code>'a b'</code>.</p>
        <p>Вы также можете передать функцию, которая должна возвращать одну строку, содержащую дополнительные имена классов.</p>
      </td>
    </tr>
    <tr>
      <td>boundary</td>
      <td>string | element</td>
      <td>'scrollParent'</td>
      <td>Граница ограничения переполнения всплывающего окна. Принимает значения <code>'viewport'</code>, <code>'window'</code>, <code>'scrollParent'</code> или ссылку HTMLElement (только JavaScript). Дополнительную информацию смотрите <a href="https://popper.js.org/docs/v1/#modifiers..preventOverflow.boundariesElement">документацию preventOverflow</a> Popper.</td>
    </tr>
    <tr>
      <td>sanitize</td>
      <td>boolean</td>
      <td>true</td>
      <td>Включите или отключите дезинфекцию. Если активирован параметр <code>'template'</code>, <code>'content'</code> и <code>'title'</code> будут очищены.</td>
    </tr>
    <tr>
      <td>whiteList</td>
      <td>object</td>
      <td><a href="{{< docsref "/getting-started/javascript#sanitizer" >}}">Значение по умолчанию</a></td>
      <td>Объект, содержащий разрешенные атрибуты и теги</td>
    </tr>
    <tr>
      <td>sanitizeFn</td>
      <td>null | function</td>
      <td>null</td>
      <td>Здесь Вы можете предоставить свою собственную функцию очистки. Это может быть полезно, если Вы предпочитаете использовать специальную библиотеку для выполнения очистки.</td>
    </tr>
    <tr>
      <td>popperConfig</td>
      <td>null | object</td>
      <td>null</td>
      <td>Чтобы изменить конфигурацию Popper по умолчанию для Bootstrap, смотрите <a href="https://popper.js.org/docs/v1/#Popper.Defaults">конфигурацию Popper</a></td>
    </tr>
  </tbody>
</table>

{{< callout info >}}
#### Атрибуты данных для отдельных всплывающих окон

В качестве альтернативы параметры для отдельных всплывающих окон можно указать с помощью атрибутов данных, как описано выше.
{{< /callout >}}

### Методы

{{< callout danger >}}
{{< partial "callout-danger-async-methods.md" >}}
{{< /callout >}}

#### `$().popover(options)`

Инициализирует всплывающие окна для коллекции элементов.

#### `.popover('show')`

Показывает всплывающее окно элемента. **Возврат к вызывающей стороне до того, как всплывающее окно было показано** (то есть до того, как произойдет событие `shown.bs.popover`). Это считается "ручным" запуском всплывающего окна. Всплывающие окна, заголовок и содержимое которых имеют нулевую длину, никогда не отображаются.

```js
$('#element').popover('show')
```

#### `.popover('hide')`

Скрывает всплывающее окно элемента. **Возврат к вызывающей стороне до того, как всплывающее окно было фактически скрыто** (т.е. до того, как произойдет событие `hidden.bs.popover`). Это считается "ручным" запуском всплывающего окна.

```js
$('#element').popover('hide')
```

#### `.popover('toggle')`

Переключает всплывающее окно элемента. **Возврат к вызывающей стороне до того, как всплывающее окно было фактически показано или скрыто** (то есть до того, как произойдет событие `shown.bs.popover` или `hidden.bs.popover`). Это считается "ручным" запуском всплывающего окна.

```js
$('#element').popover('toggle')
```

#### `.popover('dispose')`

Скрывает и уничтожает всплывающее окно элемента. Всплывающие окна, использующие делегирование (которые создаются с использованием [опции `selector`](#параметры)), не могут быть уничтожены индивидуально для дочерних триггерных элементов.

```js
$('#element').popover('dispose')
```

#### `.popover('enable')`

Дает возможность отображения всплывающего окна элемента. **Всплывающие окна включены по умолчанию.**

```js
$('#element').popover('enable')
```

#### `.popover('disable')`

Удаляет возможность отображения всплывающего окна элемента. Всплывающее окно будет отображаться, только если оно будет повторно включено.

```js
$('#element').popover('disable')
```

#### `.popover('toggleEnabled')`

Переключает возможность отображения или скрытия всплывающего окна элемента.

```js
$('#element').popover('toggleEnabled')
```

#### `.popover('update')`

Обновляет позицию всплывающего окна элемента.

```js
$('#element').popover('update')
```

### События

<table class="table table-bordered table-striped">
  <thead>
    <tr>
      <th style="width: 150px;">Тип события</th>
      <th>Описание</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>show.bs.popover</td>
      <td>Это событие запускается немедленно при вызове метода экземпляра <code>show</code>.</td>
    </tr>
    <tr>
      <td>shown.bs.popover</td>
      <td>Это событие запускается, когда всплывающее окно становится видимым для пользователя (будет ожидать завершения переходов CSS).</td>
    </tr>
    <tr>
      <td>hide.bs.popover</td>
      <td>Это событие запускается сразу после вызова метода экземпляра <code>hide</code>.</td>
    </tr>
    <tr>
      <td>hidden.bs.popover</td>
      <td>Это событие запускается, когда всплывающее окно перестает быть скрытым от пользователя (будет ждать завершения переходов CSS).</td>
    </tr>
    <tr>
      <td>inserted.bs.popover</td>
      <td>Это событие запускается после события <code>show.bs.popover</code>, когда шаблон всплывающего окна добавлен в DOM.</td>
    </tr>
  </tbody>
</table>

```js
$('#myPopover').on('hidden.bs.popover', function () {
  // сделайте что-нибудь...
})
```
